--- a/Loan.ipynb
+++ b/Loan.ipynb
@@ -3067,7 +3067,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#loan['revol_util'] = loan['revol_util'].str.replace('%','').astype('float')\n",
+    "loan['revol_util'] = loan['revol_util'].str.replace('%','').astype('float')\n",
     "\n",
     "loan['emp_length'] = loan['emp_length'].str.replace(' year','')\n",
     "loan['emp_length'] = loan['emp_length'].str.replace('s','')\n",
@@ -3085,7 +3085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3111,11 +3111,9 @@
        "      <th></th>\n",
        "      <th>term</th>\n",
        "      <th>grade</th>\n",
-       "      <th>emp_length</th>\n",
        "      <th>home_ownership</th>\n",
        "      <th>verification_status</th>\n",
        "      <th>purpose</th>\n",
-       "      <th>revol_util</th>\n",
        "      <th>application_type</th>\n",
        "      <th>hardship_flag</th>\n",
        "      <th>debt_settlement_flag</th>\n",
@@ -3196,11 +3194,9 @@
        "      <td>0</td>\n",
        "      <td>36 months</td>\n",
        "      <td>C</td>\n",
-       "      <td>3</td>\n",
        "      <td>RENT</td>\n",
        "      <td>Source Verified</td>\n",
        "      <td>debt_consolidation</td>\n",
-       "      <td>43.70%</td>\n",
        "      <td>Individual</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
@@ -3279,11 +3275,9 @@
        "      <td>1</td>\n",
        "      <td>36 months</td>\n",
        "      <td>D</td>\n",
-       "      <td>0</td>\n",
        "      <td>RENT</td>\n",
        "      <td>Not Verified</td>\n",
        "      <td>other</td>\n",
-       "      <td>68.80%</td>\n",
        "      <td>Individual</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
@@ -3362,11 +3356,9 @@
        "      <td>2</td>\n",
        "      <td>60 months</td>\n",
        "      <td>B</td>\n",
-       "      <td>0</td>\n",
        "      <td>OWN</td>\n",
        "      <td>Not Verified</td>\n",
        "      <td>home_improvement</td>\n",
-       "      <td>25.60%</td>\n",
        "      <td>Individual</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
@@ -3445,11 +3437,9 @@
        "      <td>3</td>\n",
        "      <td>36 months</td>\n",
        "      <td>C</td>\n",
-       "      <td>11</td>\n",
        "      <td>RENT</td>\n",
        "      <td>Not Verified</td>\n",
        "      <td>credit_card</td>\n",
-       "      <td>41.70%</td>\n",
        "      <td>Individual</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
@@ -3528,11 +3518,9 @@
        "      <td>4</td>\n",
        "      <td>36 months</td>\n",
        "      <td>C</td>\n",
-       "      <td>5</td>\n",
        "      <td>RENT</td>\n",
        "      <td>Source Verified</td>\n",
        "      <td>debt_consolidation</td>\n",
-       "      <td>83.60%</td>\n",
        "      <td>Individual</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
@@ -3612,75 +3600,68 @@
        "</div>"
       ],
       "text/plain": [
-       "         term grade  emp_length home_ownership verification_status  \\\n",
-       "0   36 months     C           3           RENT     Source Verified   \n",
-       "1   36 months     D           0           RENT        Not Verified   \n",
-       "2   60 months     B           0            OWN        Not Verified   \n",
-       "3   36 months     C          11           RENT        Not Verified   \n",
-       "4   36 months     C           5           RENT     Source Verified   \n",
+       "         term grade home_ownership verification_status             purpose  \\\n",
+       "0   36 months     C           RENT     Source Verified  debt_consolidation   \n",
+       "1   36 months     D           RENT        Not Verified               other   \n",
+       "2   60 months     B            OWN        Not Verified    home_improvement   \n",
+       "3   36 months     C           RENT        Not Verified         credit_card   \n",
+       "4   36 months     C           RENT     Source Verified  debt_consolidation   \n",
        "\n",
-       "              purpose  revol_util application_type hardship_flag  \\\n",
-       "0  debt_consolidation      43.70%       Individual             N   \n",
-       "1               other      68.80%       Individual             N   \n",
-       "2    home_improvement      25.60%       Individual             N   \n",
-       "3         credit_card      41.70%       Individual             N   \n",
-       "4  debt_consolidation      83.60%       Individual             N   \n",
+       "  application_type hardship_flag debt_settlement_flag  loan_amnt  emp_length  \\\n",
+       "0       Individual             N                    N       3025           3   \n",
+       "1       Individual             N                    N       5000           0   \n",
+       "2       Individual             N                    N      12000           0   \n",
+       "3       Individual             N                    N       3000          11   \n",
+       "4       Individual             N                    N      17500           5   \n",
        "\n",
-       "  debt_settlement_flag  loan_amnt  emp_length  annual_inc  loan_status  \\\n",
-       "0                    N       3025           3     30000.0            0   \n",
-       "1                    N       5000           0     42000.0            0   \n",
-       "2                    N      12000           0     89000.0            0   \n",
-       "3                    N       3000          11     50000.0            0   \n",
-       "4                    N      17500           5     82000.0            0   \n",
+       "   annual_inc  loan_status  delinq_2yrs  fico_range_low  fico_range_high  \\\n",
+       "0     30000.0            0            0             665              669   \n",
+       "1     42000.0            0            4             665              669   \n",
+       "2     89000.0            0            0             730              734   \n",
+       "3     50000.0            0            0             680              684   \n",
+       "4     82000.0            0            1             670              674   \n",
        "\n",
-       "   delinq_2yrs  fico_range_low  fico_range_high  inq_last_6mths  open_acc  \\\n",
-       "0            0             665              669               0         9   \n",
-       "1            4             665              669               0         4   \n",
-       "2            0             730              734               4        11   \n",
-       "3            0             680              684               0         8   \n",
-       "4            1             670              674               0        12   \n",
+       "   inq_last_6mths  open_acc  pub_rec  revol_bal  revol_util  total_acc  \\\n",
+       "0               0         9        0       2885        43.7         22   \n",
+       "1               0         4        0       1719        68.8          8   \n",
+       "2               4        11        1       8977        25.6         21   \n",
+       "3               0         8        0       7542        41.7         23   \n",
+       "4               0        12        0      15296        83.6         27   \n",
        "\n",
-       "   pub_rec  revol_bal  revol_util  total_acc  last_fico_range_high  \\\n",
-       "0        0       2885        43.7         22                   649   \n",
-       "1        0       1719        68.8          8                   679   \n",
-       "2        1       8977        25.6         21                   679   \n",
-       "3        0       7542        41.7         23                   674   \n",
-       "4        0      15296        83.6         27                   674   \n",
+       "   last_fico_range_high  last_fico_range_low  policy_code  acc_now_delinq  \\\n",
+       "0                   649                  645            1               0   \n",
+       "1                   679                  675            1               0   \n",
+       "2                   679                  675            1               0   \n",
+       "3                   674                  670            1               0   \n",
+       "4                   674                  670            1               0   \n",
        "\n",
-       "   last_fico_range_low  policy_code  acc_now_delinq  tot_coll_amt  \\\n",
-       "0                  645            1               0             0   \n",
-       "1                  675            1               0             0   \n",
-       "2                  675            1               0             0   \n",
-       "3                  670            1               0             0   \n",
-       "4                  670            1               0             0   \n",
+       "   tot_coll_amt  tot_cur_bal  open_acc_6m  open_act_il  open_il_12m  \\\n",
+       "0             0        19021            0            3            0   \n",
+       "1             0         1719            0            0            0   \n",
+       "2             0        66081            0            7            1   \n",
+       "3             0        25605            0            1            0   \n",
+       "4             0       141781            0            6            0   \n",
        "\n",
-       "   tot_cur_bal  open_acc_6m  open_act_il  open_il_12m  open_il_24m  \\\n",
-       "0        19021            0            3            0            1   \n",
-       "1         1719            0            0            0            0   \n",
-       "2        66081            0            7            1            1   \n",
-       "3        25605            0            1            0            1   \n",
-       "4       141781            0            6            0            2   \n",
+       "   open_il_24m  mths_since_rcnt_il  total_bal_il    il_util  open_rv_12m  \\\n",
+       "0            1            16.00000         16136  82.000000            3   \n",
+       "1            0            46.62556             0  51.385627            0   \n",
+       "2            1            11.00000         57104  57.000000            1   \n",
+       "3            1            22.00000         18063  75.000000            0   \n",
+       "4            2            16.00000        126485  63.000000            0   \n",
        "\n",
-       "   mths_since_rcnt_il  total_bal_il    il_util  open_rv_12m  open_rv_24m  \\\n",
-       "0            16.00000         16136  82.000000            3            4   \n",
-       "1            46.62556             0  51.385627            0            0   \n",
-       "2            11.00000         57104  57.000000            1            1   \n",
-       "3            22.00000         18063  75.000000            0            1   \n",
-       "4            16.00000        126485  63.000000            0            0   \n",
+       "   open_rv_24m  max_bal_bc  all_util  total_rev_hi_lim  inq_fi  total_cu_tl  \\\n",
+       "0            4        1530      72.0              6600       1            1   \n",
+       "1            0         618      69.0              2500       0            0   \n",
+       "2            1        5154      40.0             35000       3            3   \n",
+       "3            1         482      61.0             18100       1            3   \n",
+       "4            0        4624      71.0             18300       2            0   \n",
        "\n",
-       "   max_bal_bc  all_util  total_rev_hi_lim  inq_fi  total_cu_tl  inq_last_12m  \\\n",
-       "0        1530      72.0              6600       1            1             1   \n",
-       "1         618      69.0              2500       0            0             0   \n",
-       "2        5154      40.0             35000       3            3             9   \n",
-       "3         482      61.0             18100       1            3             0   \n",
-       "4        4624      71.0             18300       2            0             0   \n",
-       "\n",
-       "   acc_open_past_24mths  avg_cur_bal  bc_open_to_buy  bc_util  \\\n",
-       "0                     5       2378.0            59.0     97.6   \n",
-       "1                     0        430.0           781.0     68.8   \n",
-       "2                     2       6007.0         25523.0     26.0   \n",
-       "3                     2       3201.0          7518.0      6.0   \n",
-       "4                     2      11815.0          2113.0     87.9   \n",
+       "   inq_last_12m  acc_open_past_24mths  avg_cur_bal  bc_open_to_buy  bc_util  \\\n",
+       "0             1                     5       2378.0            59.0     97.6   \n",
+       "1             0                     0        430.0           781.0     68.8   \n",
+       "2             9                     2       6007.0         25523.0     26.0   \n",
+       "3             0                     2       3201.0          7518.0      6.0   \n",
+       "4             0                     2      11815.0          2113.0     87.9   \n",
        "\n",
        "   chargeoff_within_12_mths  delinq_amnt  mo_sin_old_il_acct  \\\n",
        "0                         0            0          164.000000   \n",
@@ -3746,7 +3727,7 @@
        "4                      113163        4.685714  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3767,9 +3748,10 @@
     "Imputed = Imputed.drop(Imputed.columns[0], axis=1)\n",
     "Imputed['loan_status'] = Imputed['loan_status'].astype('int')\n",
     "loan = loan.drop(num_features, axis=1)\n",
+    "loan = loan.drop('emp_length',axis=1)\n",
     "loan.reset_index(drop=True, inplace=True)\n",
     "for feature in Imputed.columns.values:\n",
-    "    loan.insert(loc=len(loan.columns), column=feature, value=Imputed[feature],allow_duplicates=True)\n",
+    "    loan.insert(loc=len(loan.columns), column=feature, value=Imputed[feature])\n",
     "loan.head()"
    ]
   }
